[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/player/fidle.png" type="Texture" id=1]
[ext_resource path="res://sprites/player/bidle.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://sprites/player/bmove_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/sidle.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/bmove_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/fmove_1.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/fmove_2.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/smove.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/idleanim.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/action/faction.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/action/raction.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/action/laction.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/action/baction.png" type="Texture" id=14]
[ext_resource path="res://sound/punch.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "fmove",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "laction",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "waiting",
"speed": 0.25
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "smove",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "raction",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "baction",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "faction",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "sidle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "bmove",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "bidle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "fidle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.00837, 1.81863 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.18777, 2.76808 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fidle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.00978088, 6.18373 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ObjDetect" type="Area2D" parent="."]
position = Vector2( 0.00978088, 6.18373 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjDetect"]
shape = SubResource( 3 )

[node name="Punch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -3.624
pitch_scale = 1.52
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="ObjDetect" to="." method="_on_ObjDetect_area_entered"]
[connection signal="area_exited" from="ObjDetect" to="." method="_on_ObjDetect_area_exited"]
